# stabstream

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  circuit.stim  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  wheels.yml
benches/: Cargo.toml
benches/benches/: noise_sampler.rs  parse_throughput.rs  replay_throughput.rs  summary.rs  uf_decode.rs  validate_overhead.rs  window_slide.rs
crates/stabstream-analyze/: Cargo.toml
crates/stabstream-analyze/src/: main.rs
crates/stabstream-analyze/tests/: e2e_pipeline.rs
crates/stabstream-convert/: Cargo.toml
crates/stabstream-convert/src/: lib.rs  main.rs
crates/stabstream-core/: Cargo.toml
crates/stabstream-core/src/: code.rs  error.rs  frame.rs  lib.rs  otel.rs  schema.rs  window.rs
crates/stabstream-core/tests/: workspace_circular_deps.rs
crates/stabstream-decoder/: Cargo.toml
crates/stabstream-decoder/src/: lib.rs  mwpm.rs  union_find.rs
crates/stabstream-dem/: Cargo.toml
crates/stabstream-dem/src/: graph.rs  ldpc.rs  lib.rs  parser.rs  schema_gen.rs
crates/stabstream-deserialize/: Cargo.toml
crates/stabstream-deserialize/src/: lib.rs  parser.rs  ring_buffer.rs  rle.rs  stream.rs  testutil.rs
crates/stabstream-ffi/: Cargo.toml  build.rs
crates/stabstream-ffi/src/: c_api.rs  inner.rs  lib.rs  python.rs
crates/stabstream-metrics/: Cargo.toml
crates/stabstream-metrics/src/: histogram.rs  lib.rs  report.rs
crates/stabstream-py/: Cargo.toml  README.md  pyproject.toml  stabstream.pyi
crates/stabstream-py/python/stabstream/: __init__.py  __init__.pyi  _qssf_write.py  io.py  plot.py  replay.py  sim.py
crates/stabstream-py/python/stabstream/cli/: __init__.py  cirq_to_qssf.py  qiskit_to_qssf.py
crates/stabstream-py/python/stabstream/decoders/: __init__.py  chromobius.py  neural_decoder.py  pymatching_decoder.py  tesseract.py
crates/stabstream-py/python/stabstream/vendors/: __init__.py  cirq.py  ibm.py
crates/stabstream-py/src/: lib.rs
crates/stabstream-replay/: Cargo.toml
crates/stabstream-replay/src/: analyze.rs  lib.rs  player.rs  recorder.rs
crates/stabstream-sim/: Cargo.toml
crates/stabstream-sim/src/: broadcast.rs  lib.rs  main.rs  noise.rs  shm.rs
crates/stabstream-threshold/: Cargo.toml
crates/stabstream-threshold/src/: compare.rs  data.rs  main.rs  plot.rs  run.rs
crates/stabstream-validate/: Cargo.toml
crates/stabstream-validate/src/: lib.rs  parity.rs  policy.rs  schema_consistency.rs  timing.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs  metrics.rs  ui.rs
docs/theory/: decoder_guide.md  qec_primer.md
docs/tutorials/: 01_hello_syndrome.md  02_offline_analysis.md  03_python_integration.md  04_transport_modes.md  05_decoder_plugins.md  07_hardware_integration.md
examples/: pymatching_integration.rs  stim_dem_import.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_rle.rs  fuzz_dem_parser.rs  fuzz_parse_frame_header.rs
notebooks/: 01_syndrome_exploration.ipynb  02_threshold_sweep.ipynb  03_decoder_comparison.ipynb  04_hardware_debugging.ipynb  05_neural_decoder.ipynb  06_end_to_end_demo.ipynb
notebooks/data/: rep5_mlp.pt
python/examples/: parse_frames.py  pymatching_bridge.py  vendor_adapters.py
schemas/: bivariate_bicycle_144_12_12.json  bivariate_bicycle_72_12_6.json  color_code_d5.json  honeycomb_d4.json  repetition_d11.json  surface_code_d3.json  surface_code_d5.json  surface_code_d7.json
spec/: QSSF_FORMAT.md
