[workspace]
resolver = "2"
members = [
    "crates/stabstream-core",
    "crates/stabstream-decoder",
    "crates/stabstream-deserialize",
    "crates/stabstream-validate",
    "crates/stabstream-replay",
    "crates/stabstream-ffi",
    "crates/stabstream-convert",
    "crates/stabstream-py",
    "crates/stabstream-sim",
    "crates/stabstream-dem",
    "crates/stabstream-metrics",
    "crates/stabstream-analyze",
    "dashboard",
    "benches",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["stabstream contributors"]
license      = "Apache-2.0"
repository   = "https://github.com/your-org/stabstream"
rust-version = "1.75"

[workspace.dependencies]
# async runtime
tokio        = { version = "1",    features = ["full"] }
# parsing
nom          = "7"
bytes        = "1"
# error handling
thiserror    = "1"
anyhow       = "1"
# serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
# compression
zstd         = "0.13"
# FFI / Python
pyo3         = { version = "0.21", features = ["extension-module"] }
cbindgen     = "0.26"
# TUI
ratatui      = "0.26"
crossterm    = "0.27"
# benchmarking
criterion    = { version = "0.5", features = ["html_reports"] }
# logging
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# UUID
uuid         = { version = "1", features = ["v4", "serde"] }
# CRC32 (for frame/header integrity)
crc32fast    = "1"
# CLI argument parsing
clap         = { version = "4", features = ["derive"] }
# OpenTelemetry (optional, behind "otel" feature flags)
opentelemetry       = { version = "0.22", features = ["trace"] }
opentelemetry_sdk   = { version = "0.22", features = ["trace", "rt-tokio"] }
opentelemetry-otlp  = { version = "0.15", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.23"
