[package]
name         = "stabstream-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description  = "Criterion benchmarks for stabstream parse throughput and validator overhead"

[[bench]]
name    = "parse_throughput"
harness = false

[[bench]]
name    = "validate_overhead"
harness = false

[[bench]]
name    = "noise_sampler"
harness = false

[[bench]]
name    = "replay_throughput"
harness = false

[[bench]]
name    = "window_slide"
harness = false

[[bench]]
name    = "uf_decode"
harness = false

# Must be last so it runs after all other bench targets have written their results.
[[bench]]
name    = "summary"
harness = false

[dependencies]
stabstream-core        = { path = "../crates/stabstream-core" }
stabstream-deserialize = { path = "../crates/stabstream-deserialize" }
stabstream-validate    = { path = "../crates/stabstream-validate" }
stabstream-replay      = { path = "../crates/stabstream-replay" }
stabstream-decoder     = { path = "../crates/stabstream-decoder" }
stabstream-dem         = { path = "../crates/stabstream-dem" }
tokio.workspace        = true
crc32fast.workspace    = true
serde_json.workspace   = true

[dev-dependencies]
criterion.workspace = true
