[package]
name         = "stabstream-decoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description  = "Decoder trait and reference implementations for stabstream QEC pipelines"

[dependencies]
stabstream-core = { path = "../stabstream-core" }
stabstream-dem  = { path = "../stabstream-dem" }
thiserror.workspace = true

[dependencies.fusion-blossom]
version = "0.2"
optional = true
default-features = false

[features]
mwpm = ["dep:fusion-blossom"]
