[package]
name         = "stabstream-dem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description  = "Stim detector error model (DEM) parser and spacetime syndrome graph for stabstream"

[dependencies]
stabstream-core = { path = "../stabstream-core" }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
