[package]
name         = "stabstream-dem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description  = "Stim detector error model (DEM) parser and spacetime syndrome graph for stabstream"

[[bin]]
name = "ldpc-to-schema"
path = "src/bin/ldpc_to_schema.rs"

[dependencies]
stabstream-core = { path = "../stabstream-core" }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
clap.workspace   = true
anyhow.workspace = true
