[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "stabstream"
requires-python = ">=3.8"
description = "Python bindings for stabstream — high-performance QEC syndrome stream deserializer"
license = { text = "Apache-2.0" }
version = "0.1.0"
readme = "../../README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "stabstream"
